--- a/IndiabanaApp/app/src/main/res/layout/fragment_billing.xml
+++ b/IndiabanaApp/app/src/main/res/layout/fragment_billing.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/gray_bg_round_corner"
-    tools:context=".Fragments.BillingFragment">
+    tools:context=".Fragments.Billing.BillingFragment">
 
     <ImageView
         android:id="@+id/imageView"
