--- a/IndiabanaApp/app/src/main/res/layout/activity_rate_purchase.xml
+++ b/IndiabanaApp/app/src/main/res/layout/activity_rate_purchase.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,8 +8,10 @@
     tools:context=".Activities.AddProduct.AddProductActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/cl_bottom_continue"
+        android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:background="@color/dark_azyl"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHeight_percent="0.15"
@@ -35,9 +37,20 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <androidx.cardview.widget.CardView
+        android:layout_above="@+id/cl_bottom_continue"
+        android:layout_below="@+id/activity_to_post_toolbar"
+        android:layout_width="match_parent"
+        app:cardCornerRadius="20dp"
+        android:layout_marginTop="-20dp"
+        android:layout_height="match_parent"
+        android:backgroundTint="@color/activity_bg_color">
+
     <ScrollView
-        android:layout_height="0dp"
-        android:background="@drawable/gray_bg_round_corner"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/activity_to_post_toolbar"
+        android:layout_height="match_parent"
+        android:layout_above="@+id/cl_bottom_continue"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -46,8 +59,7 @@
         app:layout_constraintVertical_bias="0"
         app:layout_constraintTop_toBottomOf="@+id/activity_to_post_toolbar"
         android:layout_width="match_parent"
-        app:layout_constraintHeight_percent="0.80"
-        android:layout_marginTop="?actionBarSize">
+        app:layout_constraintHeight_percent="0.80">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -378,7 +390,7 @@
         </LinearLayout>
 
     </ScrollView>
-
+    </androidx.cardview.widget.CardView>
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/activity_to_post_toolbar"
         android:layout_width="match_parent"
@@ -415,4 +427,4 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
